# MAL-Service

./: Dockerfile  MAL-Microservice.sln  README.md  test.txt
.certs/: aspnetapp.crt  aspnetapp.key  aspnetapp.pfx  setup-cert.bat  setup-cert.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: CI-CD-API.yml  allow-only-PR-from-Development.yml  auto-approve-pull-requests-from-bugfix-branches.yml  ci-cd-AzureFunction-SEP4PredictionApp.yml  ci-cd-MAL-LinearRegression-ModelTrainingService.yml  ci-cd-MAL-Prediction-Service.yml  ci-cd-MAL-RandomForest-ModelTrainingService.yml  ci-cd-linear-training-service  ci-cd-mal-prediction-build-service.yml  ci-cd-test-prototype-endpoint.yml  ci-cd.yml  ci-run-all-dotnet-test.yml  ci-run-all-dotnet-tests  dotnet-docker.yml  main.yml  main_sep4predictionapp.yml  main_soilhumiditypredictor.yml  mal-api-AutoDeployTrigger-6b318701-319f-485d-9d87-c6f3e0e262ed.yml  mal-prediction-build-service-AutoDeployTrigger-21c3a8b4-1af3-46aa-829e-06b4e778f160.yml
MAL-Api-Service/: MAL-Api-Service.csproj  MAL-Api-Service.http  Program.cs  WeatherForecast.cs  appsettings.Development.json  appsettings.json
MAL-Api-Service.Tests/: MAL-Api-Service.Tests.csproj  UnitTest1.cs
MAL-Api-Service/Properties/: launchSettings.json
dotnet/: .gitignore  Dockerfile  MAL-Microservice.sln  README.md  coverlet.runsettings
dotnet/.certs/: localhost_custom.pfx  setup-cert.bat  setup-cert.sh
dotnet/.devcontainer/: devcontainer.json
dotnet/API/: API.csproj  Program.cs  appsettings.json
dotnet/API.tests/: API.tests.csproj  UnitTest1.cs
dotnet/MAL-Prediction-Build-Service/: Dockerfile
dotnet/RESTApi/: Dockerfile
prototype/: .gitignore
prototype/.certs/: localhost_custom.crt
python/: .gitignore  Dockerfile
python-dev/: Dockerfile
python/model_training_service_linear_regression/: Dockerfile  linear_regression_data_processing.ipynb  pyproject.toml
python/model_training_service_linear_regression/cli/: run_job.py  schedule.py  serve.py  train.py
python/model_training_service_linear_regression/src/: config.py  scheduler.py
python/model_training_service_linear_regression/src/data/: cleaning.py  io.py
python/model_training_service_linear_regression/src/features/: target.py
python/model_training_service_linear_regression/src/models/: ridge.py
python/model_training_service_linear_regression/src/services/: blob_uploader.py
python/model_training_service_linear_regression/tests/: conftest.py
python/model_training_service_linear_regression/tests/integration/: test_upload.py
python/model_training_service_linear_regression/tests/unit/: test_target.py
python/model_training_service_randomforest/: Dockerfile  README.md  pyproject.toml
python/model_training_service_randomforest/cli/: run_job.py  schedule.py  serve.py  train.py
python/model_training_service_randomforest/src_rf/: config_rf.py  scheduler.py
python/model_training_service_randomforest/src_rf/data/: cleaning.py  io.py
python/model_training_service_randomforest/src_rf/features/: target.py
python/model_training_service_randomforest/src_rf/models/: randomforest.py
python/model_training_service_randomforest/src_rf/services/: blob_uploader.py
python/model_training_service_randomforest/tests/: conftest.py
python/model_training_service_randomforest/tests/integration/: test_job_flow.py
python/model_training_service_randomforest/tests/unit/: test_target.py
(+151 files in other folders)
