[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "model_training_service"
version = "0.1.0"
description = "soil-humidity ridge model trainer"
authors = [{ name = "KatAamand", email = "344848@via.dk" }]
dependencies = [
    "pytest",
    "requests",
    "apscheduler",
    "pytz",
    "numpy",
    "pandas",
    "scikit-learn",
    "onnx",
    "skl2onnx",
    "azure-identity",
    "azure-storage-blob"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
