[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "model_training_service"
version = "0.1.0"
description = "soil-humidity ridge model trainer"
authors = [{ name = "KatAamand", email = "344848@via.dk" }]
dependencies = [
    "pytest",
    "requests",
    "apscheduler",
    "pytz",
    "numpy>=1.24.4,<1.25.0",
    "scikit-learn>=1.2.2,<1.3.0",
    "pandas",
    "onnx>=1.12.0,<1.16.0",
    "skl2onnx>=1.14.0,<1.15.0",
    "azure-identity",
    "azure-storage-blob"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
