[project]
name = "randomforest_model_training_service"
version = "0.1.0"
description = "RandomForest training service for SEP4"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "scikit-learn>=1.2.2,<1.3.0",
    "numpy>=1.24.4,<1.25.0",
    "pandas",
    "onnx>=1.12.0,<1.16.0",
    "skl2onnx>=1.14.0,<1.15.0",
    "apscheduler",
    "requests",
    "azure-identity",
    "azure-storage-blob",
    "pytest",
    "pydantic",
    "python-dotenv",
    "pytz"
]

[tool.setuptools]
packages = ["src_rf"]
package-dir = { "" = "src_rf" }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
