[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "model_training_servic"
version = "0.1.0"
description = "RandomForest training service"
authors = [
    { name = "marcusgrone", email = "marcusgrone@gmail.com" }
]

dependencies = [
    "requests",
    "pydantic",
    "scikit-learn",
    "pandas",
    "numpy",
    "python-dotenv",
    "skl2onnx==1.18.0",
    "onnx==1.17.0",
    "azure-storage-blob",
    "azure-identity",
    "pytest",
    "pytz",
    "apscheduler"
]

[tool.setuptools.packages.find]
where = ["src_rf"]
include = ["*"]
